--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@microsoft/signalr": "^5.0.10",
     "angular-in-memory-web-api": "^0.11.0",
     "pg": "^8.7.1",
     "rxjs": "~6.6.0",
